lamp-umbrella/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: lamp-ingress-traefik
  namespace: default
  annotations:
    # expliciet HTTP
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik

  rules:
    - host: apache.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: apache-lamp
                port:
                  number: 80

    - host: php.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: php-lamp
                port:
                  number: 8080
